--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Icone related script  -->
+    <!-- Icon related script  -->
     <script src="https://kit.fontawesome.com/34eb379e24.js" crossorigin="anonymous"></script>
 
     <!-- Google font family -->
@@ -87,7 +87,7 @@
                   <a href="#slide2" class="btn bg-black  btn-circle">❯</a>
                 </div>
               </div> 
-              <!-- slider 2 ///// -->
+              <!-- slider 2 -->
 
               <div id="slide2" class="carousel-item relative w-full rounded-2xl">
                 <!-- hero  -->
@@ -575,6 +575,9 @@
         <i class="fa-brands fa-apple"></i>
         <i class="fa-brands fa-whatsapp"></i>
       </div> 
+      <aside class="text-white">
+        <p>Copyright © 2023 - All right reserved by Miraj Amin</p>
+      </aside>
     </footer>
 </body>
 </html>
